--- a/deploy_ec2_instance.yml
+++ b/deploy_ec2_instance.yml
@@ -1,3 +1,5 @@
+# Make sure to replace the "xxxxxxxxxx" values with information from your environment
+
 - name: Provision EC2 Instance
   hosts: localhost
   gather_facts: false
